--- a/examples/index.css
+++ b/examples/index.css
@@ -5,3 +5,15 @@
 .ke-content table {
 	border-collapse:collapse;
 }
+.red {
+	color: white;
+	background-color: red;
+}
+.green {
+	color: white;
+	background-color: green;
+}
+.yellow {
+	color: white;
+	background-color: yellow;
+}
