--- a/skins/default.css
+++ b/skins/default.css
@@ -335,9 +335,15 @@
 	border:0;
 	margin:0;
 	padding:0;
+	text-align: center;
+	vertical-align: middle;
 }
 .ke-bottom-left-img {
-	display: block;
+	display: -moz-inline-stack;
+	display: inline-block;
+	vertical-align: middle;
+	zoom: 1;
+	*display: inline;
 	background-position: -0px -754px;
 	width: 15px;
 	height: 11px;
@@ -351,9 +357,15 @@
 	border:0;
 	margin:0;
 	padding:0;
+	text-align: right;
+	vertical-align: bottom;
 }
 .ke-bottom-right-img {
-	display: block;
+	display: -moz-inline-stack;
+	display: inline-block;
+	vertical-align: middle;
+	zoom: 1;
+	*display: inline;
 	background-position: -9px -745px;
 	width: 7px;
 	height: 7px;
@@ -823,10 +835,15 @@ span.ke-dialog-empty {
 	margin:0;
 	padding:0;
 	font-size: 12px;
-	line-height: 1;
+	text-align: center;
+	vertical-align: middle;
 }
 .ke-loading-img {
-	display: block;
+	display: -moz-inline-stack;
+	display: inline-block;
+	vertical-align: middle;
+	zoom: 1;
+	*display: inline;
 	background-repeat: no-repeat;
 	background-image: url(./common/loading.gif);
 	width: 16px;
