--- a/skins/default.css
+++ b/skins/default.css
@@ -638,74 +638,18 @@
 }
 .ke-dialog {
 	position: absolute;
-	border:0;
-	margin:0;
-	padding:0;
+	margin: 0;
+	padding: 0;
+	color: #333;
+	background-color: #F0F0EE;
+}
+.ke-dialog-shadow {
+	border: 1px solid #A0A0A0;
+	border-radius: 0 0 4px 4px;
+	box-shadow: 0 4px 16px #A0A0A0;
 }
 .ke-dialog-no-shadow {
 	border: 1px solid #A0A0A0;
-	background-color: #F0F0EE;
-	color: #222222;
-}
-.ke-dialog-table {
-	border:0;
-	padding:0;
-	margin:0;
-	border-collapse:separate;
-	empty-cells:show;
-}
-span.ke-dialog-empty {
-	display:block;
-	width:5px;
-	height:5px;
-	line-height:0;
-	margin: 0;
-	padding: 0;
-	border: 0;
-}
-.ke-mc {
-	border: 1px solid #F0F0EE;
-	margin:0;
-	padding:0;
-	background-color: #F0F0EE;
-	color: #222222;
-}
-.ke-tl, .ke-tc, .ke-tr, .ke-ml, .ke-mr, .ke-bl, .ke-bc, .ke-br {
-	background-color:#000;
-	filter:alpha(opacity=20);
-	opacity:0.2;
-	font-size:0;
-	line-height:0;
-	overflow:hidden;
-	border:0;
-	margin:0;
-	padding:0;
-}
-.ke-ml, .ke-mr {
-	width:5px;
-}
-.ke-tc, .ke-bc {
-	height:5px;
-}
-.ke-tl, .ke-tr, .ke-bl, .ke-br {
-	width:5px;
-	height:5px;
-}
-.ke-tl {
-	-moz-border-radius:5px 0 0 0;
-	border-radius:5px 0 0 0;
-}
-.ke-tr {
-	-moz-border-radius:0 5px 0 0;
-	border-radius:0 5px 0 0;
-}
-.ke-bl {
-	-moz-border-radius:0 0 0 5px;
-	border-radius:0 0 0 5px;
-}
-.ke-br {
-	-moz-border-radius:0 0 5px 0;
-	border-radius:0 0 5px 0;
 }
 .ke-dialog-title {
 	border:0;
@@ -728,19 +672,11 @@ span.ke-dialog-empty {
 	border: 0;
 	margin: 0;
 	padding: 0;
-	right: 15px;
-	top: 15px;
+	right: 10px;
+	top: 10px;
 	cursor: pointer;
 	background-image: url(./default/default.gif);
 	overflow: hidden;
-}
-.ke-dialog-close-shadow {
-	right: 15px;
-	top: 15px;
-}
-.ke-dialog-close-no-shadow {
-	right: 10px;
-	top: 10px;
 }
 .ke-dialog-body {
 	border:0;
