--- a/themes/default/default.css
+++ b/themes/default/default.css
@@ -18,6 +18,11 @@
 	line-height: 0;
 	visibility: hidden;
 }
+.ke-shadow {
+	box-shadow: 2px 2px 5px #A0A0A0;
+	filter: progid:DXImageTransform.Microsoft.Shadow(color='#A0A0A0', Direction=135, Strength=5);
+	background-color: #F0F0EE;
+}
 .ke-menu a,
 .ke-menu a:hover,
 .ke-dialog a,
@@ -618,15 +623,19 @@
 	margin: 0;
 	padding: 0;
 	color: #333;
+	border: 1px solid #A0A0A0;
 	background-color: #F0F0EE;
 }
 .ke-dialog-shadow {
-	border: 1px solid #A0A0A0;
-	border-radius: 0 0 4px 4px;
-	box-shadow: 0 4px 16px #A0A0A0;
-}
-.ke-dialog-no-shadow {
-	border: 1px solid #A0A0A0;
+	position: absolute;
+	z-index: -1;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	box-shadow: 3px 3px 7px #A0A0A0;
+	filter: progid:DXImageTransform.Microsoft.Shadow(color='#A0A0A0', Direction=135, Strength=7);
+	background-color: #F0F0EE;
 }
 .ke-dialog-header {
 	border:0;
@@ -825,8 +834,8 @@
 	margin: 0;
 	z-index: 811212;
 	border: 0 none;
-	opacity:0;
-	filter:alpha(opacity=0);
+	opacity: 0;
+	filter: alpha(opacity=0);
 }
 /* tabs */
 .ke-tabs {
