--- a/themes/simple/simple.css
+++ b/themes/simple/simple.css
@@ -106,6 +106,9 @@
 	color: #333;
 	background-color: #FFF;
 }
+.ke-dialog-simple .ke-dialog-shadow {
+	background-color: #FFF;
+}
 .ke-dialog-simple .ke-dialog-header {
 	border:0;
 	margin:0;
