--- a/themes/default/default.css
+++ b/themes/default/default.css
@@ -624,9 +624,13 @@
 	position: absolute;
 	margin: 0;
 	padding: 0;
+}
+.ke-dialog-content {
+	background-color: #F0F0EE;
+	width: 100%;
+	height: 100%;
 	color: #333;
 	border: 1px solid #A0A0A0;
-	background-color: #F0F0EE;
 }
 .ke-dialog-shadow {
 	position: absolute;
@@ -638,7 +642,7 @@
 	box-shadow: 3px 3px 7px #A0A0A0;
 	-moz-box-shadow: 3px 3px 7px #A0A0A0;
 	-webkit-box-shadow: 3px 3px 7px #A0A0A0;
-	filter: progid:DXImageTransform.Microsoft.Shadow(color='#A0A0A0', Direction=135, Strength=6);
+	filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius='3', MakeShadow='true', ShadowOpacity='0.3');
 	background-color: #F0F0EE;
 }
 .ke-dialog-header {
@@ -670,6 +674,7 @@
 	font: 12px/1.5 "sans serif",tahoma,verdana,helvetica;
 	text-align: left;
 	overflow: hidden;
+	background-color: #F0F0EE;
 }
 .ke-dialog-body textarea {
 	display: block;
@@ -743,6 +748,7 @@
 	font: 12px/1 "sans serif",tahoma,verdana,helvetica;
 	text-align: right;
 	padding:0 0 5px 0;
+	background-color: #F0F0EE;
 }
 .ke-dialog-preview,
 .ke-dialog-yes {
