--- a/themes/default/default.css
+++ b/themes/default/default.css
@@ -626,7 +626,7 @@
 	padding: 0;
 }
 .ke-dialog-content {
-	background-color: #F0F0EE;
+	background-color: #FFF;
 	width: 100%;
 	height: 100%;
 	color: #333;
@@ -639,20 +639,20 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	box-shadow: 3px 3px 7px #A0A0A0;
-	-moz-box-shadow: 3px 3px 7px #A0A0A0;
-	-webkit-box-shadow: 3px 3px 7px #A0A0A0;
-	filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius='3', MakeShadow='true', ShadowOpacity='0.3');
+	box-shadow: 3px 3px 7px #999;
+	-moz-box-shadow: 3px 3px 7px #999;
+	-webkit-box-shadow: 3px 3px 7px #999;
+	filter: progid:DXImageTransform.Microsoft.Blur(PixelRadius='3', MakeShadow='true', ShadowOpacity='0.4');
 	background-color: #F0F0EE;
 }
 .ke-dialog-header {
 	border:0;
 	margin:0;
 	background-color: #F0F0EE;
-	padding: 10px;
+	border-bottom: 1px solid #CCC;
+	padding: 8px 10px;
 	text-align: left;
-	font: 14px/1 "sans serif",tahoma,verdana,helvetica;
-	font-weight: bold;
+	font: 12px/1 "sans serif",tahoma,verdana,helvetica;
 	color: #222222;
 	cursor: move;
 }
@@ -662,19 +662,16 @@
 	width: 16px;
 	height: 16px;
 	position: absolute;
-	right: 15px;
-	top: 15px;
+	right: 8px;
+	top: 8px;
 	cursor: pointer;
 	background-image: url(default.png);
 	overflow: hidden;
-	right: 10px;
-	top: 10px;
 }
 .ke-dialog-body {
 	font: 12px/1.5 "sans serif",tahoma,verdana,helvetica;
 	text-align: left;
 	overflow: hidden;
-	background-color: #F0F0EE;
 }
 .ke-dialog-body textarea {
 	display: block;
@@ -728,7 +725,7 @@
 .ke-dialog-loading {
 	position: absolute;
 	top: 0;
-	left: 0;
+	left: 1px;
 	z-index: 1;
 	text-align: center;
 }
@@ -748,7 +745,7 @@
 	font: 12px/1 "sans serif",tahoma,verdana,helvetica;
 	text-align: right;
 	padding:0 0 5px 0;
-	background-color: #F0F0EE;
+	background-color: #FFF;
 }
 .ke-dialog-preview,
 .ke-dialog-yes {
@@ -789,7 +786,6 @@
 	border: 0 none;
 	color: #333;
 	font-size: 12px;
-	font-weight: bold;
 	left: 2px;
 	text-decoration: none;
 }
@@ -864,7 +860,7 @@
 .ke-tabs-li {
 	position: relative;
 	border: 1px solid #A0A0A0;
-	background-color: #E0E0E0;
+	background-color: #F0F0EE;
 	margin: 0 2px -1px 0;
 	padding: 0 20px;
 	float: left;
@@ -874,13 +870,13 @@
 	cursor: pointer;
 }
 .ke-tabs-li-selected {
-	background-color: #F0F0EE;
-	border-bottom: 1px solid #F0F0EE;
+	background-color: #FFF;
+	border-bottom: 1px solid #FFF;
 	color: #000;
 	cursor: default;
 }
 .ke-tabs-li-on {
-	background-color: #F0F0EE;
+	background-color: #FFF;
 	color: #000;
 }
 /* emoticons */
