[trunk] add pointer cursor to button

--- a/themes/default/default.css
+++ b/themes/default/default.css
@@ -767,6 +767,7 @@
 	overflow: visible;
 	display: inline-block;
 	vertical-align: top;
+	cursor: pointer;
 }
 .ke-button-outer {
 	background-position: 0 -25px;
