--- a/themes/default/default.css
+++ b/themes/default/default.css
@@ -894,18 +894,23 @@
 /* progressbar */
 .ke-progressbar {
 	position: relative;
+	margin: 0;
+	padding: 0;
 }
 .ke-progressbar-bar {
 	border: 1px solid #6FA5DB;
 	width: 80px;
 	height: 5px;
 	margin: 10px 10px 0 10px;
+	padding: 0;
 }
 .ke-progressbar-bar-inner {
 	width: 0;
 	height: 5px;
 	background-color: #6FA5DB;
 	overflow: hidden;
+	margin: 0;
+	padding: 0;
 }
 .ke-progressbar-percent {
 	position: absolute;
