--- a/themes/default/default.css
+++ b/themes/default/default.css
@@ -1,4 +1,25 @@
 /* common */
+@font-face {
+	font-family: 'kindeditor';
+	src: url('../fonts/kindeditor.eot');
+	src: url('../fonts/kindeditor.eot#iefix') format('embedded-opentype'),
+		url('../fonts/kindeditor.woff') format('woff'),
+		url('../fonts/kindeditor.ttf') format('truetype'),
+		url('../fonts/kindeditor.svg#kindeditor') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
+/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+/*
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+@font-face {
+	font-family: 'kindeditor';
+	src: url('../fonts/kindeditor.svg#kindeditor') format('svg');
+}
+}
+*/
+
 .ke-inline-block {
 	display: -moz-inline-stack;
 	display: inline-block;
@@ -32,387 +53,6 @@
 	color: #337FE5;
 	text-decoration: none;
 }
-/* icons */
-.ke-icon-source {
-	background-position: 0px 0px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-preview {
-	background-position: 0px -16px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-print {
-	background-position: 0px -32px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-undo {
-	background-position: 0px -48px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-redo {
-	background-position: 0px -64px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-cut {
-	background-position: 0px -80px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-copy {
-	background-position: 0px -96px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-paste {
-	background-position: 0px -112px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-selectall {
-	background-position: 0px -128px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-justifyleft {
-	background-position: 0px -144px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-justifycenter {
-	background-position: 0px -160px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-justifyright {
-	background-position: 0px -176px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-justifyfull {
-	background-position: 0px -192px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-insertorderedlist {
-	background-position: 0px -208px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-insertunorderedlist {
-	background-position: 0px -224px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-indent {
-	background-position: 0px -240px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-outdent {
-	background-position: 0px -256px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-subscript {
-	background-position: 0px -272px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-superscript {
-	background-position: 0px -288px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-date {
-	background-position: 0px -304px;
-	width: 25px;
-	height: 16px;
-}
-.ke-icon-time {
-	background-position: 0px -320px;
-	width: 25px;
-	height: 16px;
-}
-.ke-icon-formatblock {
-	background-position: 0px -336px;
-	width: 25px;
-	height: 16px;
-}
-.ke-icon-fontname {
-	background-position: 0px -352px;
-	width: 21px;
-	height: 16px;
-}
-.ke-icon-fontsize {
-	background-position: 0px -368px;
-	width: 23px;
-	height: 16px;
-}
-.ke-icon-forecolor {
-	background-position: 0px -384px;
-	width: 20px;
-	height: 16px;
-}
-.ke-icon-hilitecolor {
-	background-position: 0px -400px;
-	width: 23px;
-	height: 16px;
-}
-.ke-icon-bold {
-	background-position: 0px -416px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-italic {
-	background-position: 0px -432px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-underline {
-	background-position: 0px -448px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-strikethrough {
-	background-position: 0px -464px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-removeformat {
-	background-position: 0px -480px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-image {
-	background-position: 0px -496px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-flash {
-	background-position: 0px -512px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-media {
-	background-position: 0px -528px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-div {
-	background-position: 0px -544px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-formula {
-	background-position: 0px -576px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-hr {
-	background-position: 0px -592px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-emoticons {
-	background-position: 0px -608px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-link {
-	background-position: 0px -624px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-unlink {
-	background-position: 0px -640px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-fullscreen {
-	background-position: 0px -656px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-about {
-	background-position: 0px -672px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-plainpaste {
-	background-position: 0px -704px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-wordpaste {
-	background-position: 0px -720px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-table {
-	background-position: 0px -784px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-tablemenu {
-	background-position: 0px -768px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-tableinsert {
-	background-position: 0px -784px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-tabledelete {
-	background-position: 0px -800px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-tablecolinsertleft {
-	background-position: 0px -816px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-tablecolinsertright {
-	background-position: 0px -832px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-tablerowinsertabove {
-	background-position: 0px -848px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-tablerowinsertbelow {
-	background-position: 0px -864px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-tablecoldelete {
-	background-position: 0px -880px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-tablerowdelete {
-	background-position: 0px -896px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-tablecellprop {
-	background-position: 0px -912px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-tableprop {
-	background-position: 0px -928px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-checked {
-	background-position: 0px -944px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-code {
-	background-position: 0px -960px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-map {
-	background-position: 0px -976px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-baidumap {
-	background-position: 0px -976px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-lineheight {
-	background-position: 0px -992px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-clearhtml {
-	background-position: 0px -1008px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-pagebreak {
-	background-position: 0px -1024px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-insertfile {
-	background-position: 0px -1040px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-quickformat {
-	background-position: 0px -1056px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-template {
-	background-position: 0px -1072px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-tablecellsplit {
-	background-position: 0px -1088px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-tablerowmerge {
-	background-position: 0px -1104px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-tablerowsplit {
-	background-position: 0px -1120px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-tablecolmerge {
-	background-position: 0px -1136px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-tablecolsplit {
-	background-position: 0px -1152px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-anchor {
-	background-position: 0px -1168px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-search {
-	background-position: 0px -1184px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-new {
-	background-position: 0px -1200px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-specialchar {
-	background-position: 0px -1216px;
-	width: 16px;
-	height: 16px;
-}
-.ke-icon-multiimage {
-	background-position: 0px -1232px;
-	width: 16px;
-	height: 16px;
-}
 /* container */
 .ke-container {
 	display: block;
@@ -432,19 +72,42 @@
 	zoom: 1;
 }
 .ke-toolbar-icon {
-	background-repeat: no-repeat;
-	font-size: 0;
-	line-height: 0;
-	overflow: hidden;
+	font-family: "kindeditor";
 	display: block;
+	color: #333;
+	width: 16px;
+	height: 16px;
+	font-size: 18px;
+	line-height: 16px;
+	font-style: normal;
+	font-weight: normal;
+	speak: none;
+	text-decoration: none;
+	text-align: center;
+	font-variant: normal;
+	text-transform: none;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
-.ke-toolbar-icon-url {
-	background-image: url(default.png);
+.ke-toolbar .ke-icon-fontname {
+	font-size: 12px;
+}
+.ke-toolbar .ke-icon-unlink {
+	font-size: 12px;
+}
+.ke-toolbar .ke-icon-wordpaste {
+	font-size: 14px;
+}
+.ke-toolbar .ke-icon-anchor {
+	font-size: 14px;
+}
+.ke-toolbar .ke-icon-about {
+	font-size: 14px;
 }
 .ke-toolbar .ke-outline {
 	border: 1px solid #F0F0EE;
 	margin: 1px;
-	padding: 1px 2px;
+	padding: 5px;
 	font-size: 0;
 	line-height: 0;
 	overflow: hidden;
