--- a/themes/simple/simple.css
+++ b/themes/simple/simple.css
@@ -16,7 +16,7 @@
 	border: 1px solid #FFF;
 	background-color: transparent;
 	margin: 1px;
-	padding: 5px;
+	padding: 1px 2px;
 	font-size: 0;
 	line-height: 0;
 	overflow: hidden;
